--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -9,5 +9,9 @@
   "login.submit": "Se connecter",
   "login.errors.generic": "Une erreur est survenue, veuillez réessayer plus tard",
   "login.errors.notfound": "L'email ou le mot de passe est incorrect",
-  "login.errors.unauthorized": "L'email ou le mot de passe est incorrect"
+  "login.errors.unauthorized": "L'email ou le mot de passe est incorrect",
+  "login.errors.twofactor": "Le code d'authentification double facteur est invalide",
+  "twofactor.title": "Authentification double facteur",
+  "twofactor.labels.close": "Fermer",
+  "twofactor.labels.validate": "Valider"
 }
